--- a/pubs/articles.bib
+++ b/pubs/articles.bib
@@ -36,12 +36,20 @@
   note = {[[pdf]]/papers/Alexandersen2022.pdf[[/pdf]][[preprint]]https://psyarxiv.com/qfcm9/[[/preprint]][[supplement]]https://osf.io/cv24f/[[/supplement]]}
 }
 
-@article{alexandersenEvidenceEfficacyThetaburst2025,
+@article{alexandersenEvidenceEfficacyThetaburst2025a,
   title = {Evidence for the Efficacy of Theta-Burst Stimulation above the Angular Gyrus for Reducing Mind Wandering Propensity: {{A}} Successful Pre-Registered Study},
-  author = {Alexandersen, Andreas and Aasen, Steffen Rygg and Csifcsak, Gabor and Mittner, Matthias},
+  shorttitle = {Evidence for the Efficacy of Theta-Burst Stimulation above the Angular Gyrus for Reducing Mind Wandering Propensity},
+  author = {Alexandersen, Andreas and Aasen, Steffen Rygg and Csifcsák, Gábor and Mittner, Matthias},
   date = {2025-07-25},
   journaltitle = {Cortex},
-  doi = {10.31234/osf.io/m4zyk_v2}
+  shortjournal = {Cortex},
+  issn = {0010-9452},
+  doi = {10.1016/j.cortex.2025.07.006},
+  url = {https://www.sciencedirect.com/science/article/pii/S0010945225001832},
+  urldate = {2025-07-25},
+  abstract = {Mind wandering (MW) is a common mental phenomenon where attention shifts spontaneously from an external task to internal trains of thought. Recent studies propose that non-invasive brain stimulation methods hold potential for influencing attentional shifts between on-task and MW states. Exploratory analysis from a recent repetitive transcranial magnetic stimulation (rTMS) study reported that targeting the left angular gyrus (AG) with continuous theta-burst stimulation (cTBS) reduced MW compared to sham stimulation, without affecting executive performance (Drevland et al., 2025). The present study is a pre-registered, direct replication of the study by Drevland et al., but also expands their protocol by applying intermittent theta-burst stimulation (iTBS) targeting the same cortical area. Using a triple-blind crossover design, healthy participants completed four blocks of the Finger-Tapping Random Sequence Generation Task (FT-RSGT) in three sessions on separate days. Each session included three rounds of either real (cTBS or iTBS) or sham stimulation in an accelerated rTMS design. We successfully replicated the effect of cTBS in reducing MW propensity but failed to find the expected increase in MW post-iTBS. Furthermore, based on a joint analysis of the current data and that from Drevland et al., we found compelling evidence for cTBS being efficient both in reducing MW and improving executive performance. Our results provide evidence for the causal relationship between the left AG and shifts of attention during an executive task, highlighting the role of the default mode network in the generation and maintenance of MW episodes.},
+  keywords = {Accelerated rTMS,FT-RSGT,Mind wandering,Theta-burst stimulation,Transcranial magnetic stimulation},
+  file = {/home/mmi041/snap/zotero-snap/common/Zotero/storage/Z38DJPL6/Alexandersen et al. - 2025 - Evidence for the efficacy of theta-burst stimulation above the angular gyrus for reducing mind wande.pdf;/home/mmi041/snap/zotero-snap/common/Zotero/storage/4LTJTRQV/S0010945225001832.html}
 }
 
 @article{alexandersenUnravellingThreadsThought2025,
@@ -651,12 +659,23 @@
   note = {[[pdf]]/papers/Mittner2016TICS.pdf[[/pdf]][[correction]]https://doi.org/10.1016/j.tics.2017.04.008[[/correction]]}
 }
 
-@article{mittnerNovelMethodModeling2025,
+@article{mittnerNovelMethodModeling2025a,
   title = {A Novel Method for Modeling Tonic and Phasic Pupil Dynamics in Humans},
-  author = {Mittner, Matthias and Groot, Josephine},
-  date = {2025},
-  journaltitle = {Behavioural Research Methods},
-  doi = {10.31234/osf.io/7ju4a_v2}
+  author = {Mittner, Matthias and Groot, Josephine Maria},
+  date = {2025-07-25},
+  journaltitle = {Behavior Research Methods},
+  shortjournal = {Behav Res},
+  volume = {57},
+  number = {9},
+  pages = {233},
+  issn = {1554-3528},
+  doi = {10.3758/s13428-025-02755-7},
+  url = {https://doi.org/10.3758/s13428-025-02755-7},
+  urldate = {2025-07-25},
+  abstract = {The human pupil is a widely used physiological metric in psychology and neuroscience. Changes in pupil diameter (PD) are thought to reflect changes in locus coeruleus-norepinephrine (LC/NE) activity, which is associated with cognitive and behavioral optimization. Here, we present a novel algorithm to decompose the pupil signal into its tonic and phasic components. We evaluate the utility and validity of the algorithms using both artificially generated data and an existing dataset from a fast-paced finger-tapping task. Results show that the novel algorithm outperforms traditional approaches on simulated data. We further demonstrate that our algorithm provides more conclusive evidence for relationships between mind wandering reports and pupil predictors compared to traditional window-averaging. Finally, we demonstrate that the novel and traditional estimates contain distinct information regarding neuroimaging correlates and task performance.},
+  langid = {english},
+  keywords = {Algorithm,Deconvolution,Human Physiology,LC/NE,Norepinephrine,Oculomotor system,Phasic,Physiological Psychology,Psychometrics,Psychophysics,Pupil disorders,Pupillometry,Tonic},
+  file = {/home/mmi041/snap/zotero-snap/common/Zotero/storage/2PCZH7FV/Mittner and Groot - 2025 - A novel method for modeling tonic and phasic pupil dynamics in humans.pdf}
 }
 
 @article{mittnerPypillometryPythonPackage2020,
